# koreanre_train_labelling

./: count_prompt_tokens.py  dataset.py  dataset.sh  gt_to_train.py  gt_to_train.sh  inference.py  inference.sh  pyproject.toml  train.py  train.sh
labelling/: run_verify_ui.sh  verify_server.py
labelling/static/: index.html
